🩹 Fix: overlapping logo text and hamburger menu in header on some narrow devices

--- a/assets/stylesheets/header/header.scss
+++ b/assets/stylesheets/header/header.scss
@@ -54,14 +54,16 @@ header {
 				clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 			}
 
-			&:hover {
-				img {
-					transform: translateX(-$header-height * 0.26);
-				}
-
-				&::after {
-					transform: translateX(170px);
-					clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+			@include not_un {
+				&:hover {
+					img {
+						transform: translateX(-$header-height * 0.26);
+					}
+	
+					&::after {
+						transform: translateX(170px);
+						clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+					}
 				}
 			}
 		}
